<resources>
    <string name="app_name">Mudar senha</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>

    <string name="change_password">Mudar senha</string>
    <string name="sentece_new_password">Para fazer uma <b>nova senha</b>, basta seguir estas regrinhas básicas:</string>
    <string name="new_password_rules">- escolher no mínimo 6 caracteres;\n- ter pelo menos 1 número.</string>
    <string name="hint_password">E para sua segurança, não utilize infos pessoais como data de nascimento e nem sequências como \"123456\" ou \"abcdef\", ok?</string>
    <string name="confirm">Confirmar</string>
    <string name="new_password">nova senha</string>
    <string name="repeat_new_password">repetir nova senha</string>

    <!-- Error Messages -->
    <string name="error_empty_field">campo vazio</string>
    <string name="error_passwords_not_match">ops, as senhas não são iguais</string>
    <string name="error_password_rules">regras de senha não cumpridas</string>
    <string name="error_network_or_service">Erro na conexão, verifique sua internet ou aguarde o serviço</string>

    <string name="registration_sucessfull">Cadastro realizado com sucesso ;)</string>
    <string name="ok">OK</string>
    <string name="title_activity_completed_registration">OK</string>

    <string name="retry">Novamente</string>
    <string name="error_service">Erro no serviço</string>

    <!-- Content Descriptions-->
    <string name="cd_button_ok">Botão Ok</string>
    <string name="cd_img_lock">Imagem de cadeado</string>


</resources>
